Fixed scrollbar

--- a/scss/jurnywebapp/jy-create.scss
+++ b/scss/jurnywebapp/jy-create.scss
@@ -35,7 +35,7 @@ div.creator-toolbar {
   width: 100%;
   height: 51px;
   background-color: #fff;
-  overflow-x: scroll;
+  overflow-x: auto;
   &.hidden {
     display: none;
   }
